# Timberdoodle

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  compile_commands.json  imgui.ini  vcpkg.json
cmake/: compressonator-fix.patch  deps.cmake  warnings.cmake
settings/aurora/: aurora_path.json  spiral_aurora_path.json
settings/camera/: cam_path.json  cam_path_san_miguel.json  cam_path_sun_temple.json  exported_path.json  keypoints.json
settings/sky/: default.json
src/: application.cpp  application.hpp  application_state.hpp  bezier.cpp  bezier.hpp  camera.cpp  camera.hpp  daxa_helper.cpp  daxa_helper.hpp  gpu_context.cpp  gpu_context.hpp  json_handler.cpp  json_handler.hpp  main.cpp  openvdb_loader.cpp  openvdb_loader.hpp  slot_map.hpp  timberdoodle.hpp  ui.hpp  window.cpp  window.hpp
src/asteroids/: asteroids.cpp  asteroids.hpp  asteroids_shared.hpp  solver.cpp  solver.hpp  spatial_grid.cpp  spatial_grid.hpp
src/multithreading/: queue.hpp  thread_pool.cpp  thread_pool.hpp
src/rendering/: dvmaa.inl  renderer.cpp  renderer.hpp  scene_renderer_context.hpp
src/rendering/asteroids/: asteroids_debug_draw.hlsl  asteroids_simulation.hlsl  asteroids_spatial_hashing.hlsl  draw_asteroids.cpp  draw_asteroids.hpp  draw_asteroids.inl
src/rendering/aurora/: aurora.inl  aurora_blur.hlsl  aurora_state.hpp  debug_draw_beams.hlsl  distribute_beam_origins.hlsl  distribute_emission_points.hlsl  draw_emission_points.hlsl
src/rendering/daxa_tg_debugger/: daxa_tg_debugger.cpp  daxa_tg_debugger.hlsl  daxa_tg_debugger.hpp  daxa_tg_debugger.inl
src/rendering/ddgi/: ddgi.cpp  ddgi.hpp  ddgi_update.hlsl  ddgi_update.inl
src/rendering/path_trace/: hash.hlsl  path_trace.hlsl  path_trace.inl
src/rendering/pgi/: pgi.cpp  pgi.hpp  pgi_debug_draw_probes.hlsl  pgi_eval_screen_irradiance.hlsl  pgi_trace_probe_lighting.hlsl  pgi_update.hlsl  pgi_update.inl
src/rendering/rasterize_visbuffer/: analyze_visbuffer.glsl  analyze_visbuffer.hlsl  analyze_visbuffer.inl  cull_meshes.glsl  cull_meshes.hlsl  cull_meshes.hpp  cull_meshes.inl  cull_meshlets.glsl  cull_meshlets.inl  cull_meshlets.slang  draw_visbuffer.glsl  draw_visbuffer.hlsl  draw_visbuffer.hpp  draw_visbuffer.inl  draw_visbuffer.slang  gen_hiz.glsl  gen_hiz.hlsl  gen_hiz.inl  prepopulate_inst_meshlets.glsl  prepopulate_inst_meshlets.inl  prepopulate_meshlets.glsl  prepopulate_meshlets.inl  rasterize_visbuffer.cpp  rasterize_visbuffer.hpp  select_first_pass_meshlets.glsl  select_first_pass_meshlets.hlsl  select_first_pass_meshlets.inl
src/rendering/ray_tracing/: ray_tracing.hlsl  ray_tracing.inl
src/rendering/rtao/: rtao.hlsl  rtao.inl
src/rendering/rtgi/: Denoising Basics.md  Denoising Tricks.md  RTGI_DENOISER.md  denoisinator.md  rtgi.cpp  rtgi.hpp  rtgi_adaptive_blur.hlsl  rtgi_adaptive_blur.inl  rtgi_blend_rays.hlsl  rtgi_blend_rays.inl  rtgi_denoise_diffuse.hlsl  rtgi_denoise_diffuse.inl  rtgi_distribute_rays.hlsl  rtgi_distribute_rays.inl  rtgi_post_blur.hlsl  rtgi_post_blur.inl  rtgi_pre_blur.hlsl  rtgi_pre_blur.inl  rtgi_pre_filter.hlsl  rtgi_pre_filter.inl  rtgi_reconstruct_history.hlsl  rtgi_reconstruct_history.inl  rtgi_reproject.hlsl  rtgi_reproject.inl  rtgi_reproject_diffuse.hlsl  rtgi_reproject_diffuse.inl  rtgi_shared.hlsl  rtgi_temporal.hlsl  rtgi_temporal.inl  rtgi_trace_diffuse.hlsl  rtgi_trace_diffuse.inl  rtgi_trace_diffuse_compute.hlsl  rtgi_trace_diffuse_shading.hlsl  rtgi_trace_diffuse_shared.hlsl  rtgi_upscale.hlsl  rtgi_upscale.inl
src/rendering/tasks/: autoexposure.glsl  autoexposure.inl  copy_depth.hlsl  copy_depth.hpp  cull_lights.hlsl  cull_lights.hpp  decode_visbuffer_test.glsl  decode_visbuffer_test.hlsl  decode_visbuffer_test.inl  dvmaa.hlsl  dvmaa.hpp  dvmaa.inl  dvmaa.slang  exposure.glsl  gen_gbuffer.hlsl  gen_gbuffer.hpp  memset.glsl  memset.hlsl  memset.inl  memset.slang  misc.hpp  prefix_sum.glsl  prefix_sum.inl  shade_opaque.glsl  shade_opaque.hlsl  shade_opaque.inl  shader_debug_draws.glsl  shader_debug_draws.hlsl  shader_debug_draws.inl  sky.glsl  sky.hlsl  sky.inl  write_swapchain.glsl  write_swapchain.hlsl  write_swapchain.inl
src/rendering/virtual_shadow_maps/: allocate_pages.glsl  allocate_pages.hlsl  clear_dirty_bit.glsl  clear_pages.glsl  clear_pages.hlsl  cull_and_draw_directional_pages.hlsl  cull_and_draw_pages.hlsl  cull_and_draw_pages_shared.hlsl  cull_and_draw_point_pages.hlsl  draw_debug_textures.glsl  draw_debug_textures.hlsl  find_free_pages.glsl  force_always_resident_pages.hlsl  free_wrapped_pages.glsl  free_wrapped_pages.hlsl  gen_dirty_bit_hiz.hlsl  gen_dirty_bit_hiz.slang  gen_point_dirty_bit_hiz.hlsl  get_debug_statistics.hlsl  invalidate_pages.hlsl  mark_required_pages.glsl  mark_required_pages.hlsl  vsm.hpp  vsm.inl  vsm_state.hpp
src/rendering/volumetric/: clouds.inl  compose_clouds.hlsl  raymarch_clouds.hlsl  raymarch_volumetric_shadow_map.hlsl  volumetric.hlsl  volumetric.hpp
src/scene/: asset_processor.cpp  asset_processor.hpp  mesh_lod.hpp  openvdb_loader.cpp  openvdb_loader.hpp  scene.cpp  scene.hpp
src/scene/tex_compression/: sdf_bc1_compressor.cpp  sdf_bc1_compressor.hpp  test.cpp  (+5 more)
src/shader_lib/: SH.hlsl  aurora_util.glsl  cull_util.glsl  cull_util.hlsl  ddgi.hlsl  debug.glsl  depth_util.glsl  geometry.hlsl  glsl_to_slang.glsl  gpu_work_expansion.hlsl  lights.hlsl  mesh_lod.hlsl  misc.hlsl  observer.glsl  pass_logic.glsl  pgi.hlsl  po2_expansion.hlsl  rasterization.hlsl  raytracing.hlsl  shading.glsl  shading.hlsl  sky_util.glsl  transform.glsl  transform.hlsl  visbuffer.glsl  visbuffer.hlsl  volumetric.hlsl  vsm_sampling.hlsl  vsm_util.glsl
src/shader_shared/: ao.inl  asset.inl  asteroids.inl  aurora_shared.inl  cull_util.inl  ddgi.inl  debug.inl  geometry.inl  geometry_pipeline.inl  globals.inl  gpu_work_expansion.inl  lights.inl  material.inl  per_pixel_diffuse.inl  pgi.inl  po2_expansion.inl  raytracing.inl  readback.inl  readback_stats.inl  rtgi.inl  scene.inl  shared.inl  visbuffer.inl  volumetric.inl  vsm_shared.inl
src/ui/: scene_graph.cpp  scene_graph.hpp  ui.cpp  ui.hpp  ui_shared.hpp
(+17 files in other folders)
